--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-tailwind": "^2.5.1",
     "webtorrent": "^0.98.20"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "copy-webpack-plugin": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "tailwindcss": "^3.3.3",
     "vue-cli-plugin-chrome-extension": "~0.0.17",
     "vue-template-compiler": "^2.6.11"
   }
