--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "browser-fs-access": "^0.34.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "vue": "^2.6.11",
     "vue-tailwind": "^2.5.1",
     "webtorrent": "^0.98.20"
