--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,16 @@
 {
   "name": "Shake Torrent",
   "description": "Torrent file sharing tool. View files, seed files, download files.",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "manifest_version": 3,
   "action": {
     "default_title": "Click to torrent a file",
     "default_popup": "index.html"
   },
   "icons": {
-    "16": "image/icon16.png",
-    "32": "image/icon32.png",
-    "48": "image/icon48.png",
-    "128": "image/icon128.png"
+    "16": "image/shake-16.png",
+    "32": "image/shake-32.png",
+    "48": "image/shake-48.png",
+    "128": "image/shake-128.png"
   }
 }
