--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy": "sh scripts/gh-pages-deploy.sh",
-    "pack-extension": "sh scripts/pack-chrome-extension.sh"
+    "pack-extension": "sh scripts/pack-chrome-extension.sh",
+    "pack-extension-mac": "sh scripts/pack-chrome-extension-mac.sh"
   },
   "dependencies": {
     "browser-fs-access": "^0.34.1",
