--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "vue": "^2.6.11",
-    "vue-tailwind": "^2.5.1",
-    "webtorrent": "^0.98.20"
+    "vue-tailwind": "^2.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.8",
@@ -31,5 +30,9 @@
     "tailwindcss": "^3.3.3",
     "vue-cli-plugin-chrome-extension": "~0.0.17",
     "vue-template-compiler": "^2.6.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mastashake08/shake-torrent.git"
   }
 }
