--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,21 @@
 {
   "name": "Shake Torrent",
   "description": "Torrent file sharing tool. View files, seed files, download files.",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "manifest_version": 3,
+  "side_panel": {
+    "default_path": "index.html"
+  },
   "action": {
     "default_title": "Click to torrent a file",
     "default_popup": "index.html"
+  },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+0"
+      }
+    }
   },
   "icons": {
     "16": "image/shake-16.png",
@@ -16,15 +26,5 @@
   "background": {
     "service_worker": "sw.js"
   },
-  "_execute_action": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+5"
-      },
-      "description": "Toggle side panel",
-      "global": true
-    },
-    "permissions": [
-      "sidePanel",
-      "notifications"
-    ]
+  "permissions": ["sidePanel","notifications"]
 }
